--- a/Angular-Front/src/app/components/update-user/update-user.component.html
+++ b/Angular-Front/src/app/components/update-user/update-user.component.html
@@ -1,3 +1,4 @@
+<div class="all">
 <div class = "container">
 	<h2 class = "page-header"> Update Users</h2>
 	<form (submit) = "updateData()">
@@ -34,4 +35,5 @@
 			<input type="button" (click) = "redirectBack()" value= "back" class ="btn btn-warning">
         </div>
 	</form>
+</div>
 </div>
