--- a/Angular-Front/src/app/components/add-post/add-post.component.html
+++ b/Angular-Front/src/app/components/add-post/add-post.component.html
@@ -1,21 +1,33 @@
+<div class="all">
 <div class = "container">
-	<h2 class = "page-header"> Add Post</h2>
-	<form (submit) = "addPost()">
-		<div class = "form-group">
-			<label>About</label>
-			<input type="text" [(ngModel)] = "about" name ="about" class = "form-control" required>
-		</div>
-		<div class = "form-group">
-			<label>Date</label>
-			<input type="text" bsDatepicker [(ngModel)] = "date" name ="date" class = "form-control" required>
-		</div>
-		<div class = "form-group">
-			<label>Content</label><br>
-			<textarea [(ngModel)]='content' name ="content" rows="6" cols="100"></textarea>
-		</div>
-		
-		<input type="submit" class ="btn btn-success" value = "Submit">
-	</form>
+  <h2 class = "page-header"> Add Post</h2>
+  <form (submit) = "addPost()">
+    <div class = "form-group col-lg-6">
+      <!--about-->
+      <label>Topic</label>
+      <input type="text" [(ngModel)] = "about" name ="about" class = "form-control" required>
+    </div>
+    <div class="col-md-5"></div>
+
+    <div class = "form-group col-md-7">
+      <label>Content</label><br>
+      <textarea [(ngModel)]='content' name ="content" rows="6" cols="74"></textarea>
+    </div>
+    <div class="col-md-5"></div>
+
+    <div class = "form-group col-lg-6">
+      <label>Date</label>
+      <input type="date" [(ngModel)] = "date" name ="date" class = "form-control" required>
+    </div>
+    <div class="col-md-5"></div>
+
+
+    <div class="col-md-7">
+      <input type="submit" class ="btn btn-primary" value = "Submit">
+    </div>
+    <div class="col-md-5"></div>
+
+  </form>
 </div>
 <hr>
 <div class = "container">
@@ -28,15 +40,16 @@
 			   <th>Delete</th>
 			   <th>Update</th>
 			</tr>
-			  
+
 			<tr *ngFor = "let post of posts">
 			   <td>{{post.name}}</td>
 			   <td>{{post.post}}</td>
 			   <td>{{post.date}}</td>
 			   <th>{{post.about}}</th>
-			   <th><input type="button" (click) = "deletePost(post._id)" value= "Delete" class ="btn btn-danger"></th>
-			   <th><input type="button" (click) = "updatePost(post._id)" value= "Edit" class ="btn btn-warning"></th>
+			   <th><input type="button" (click) = "deletePost(post._id)" value= "Delete" class ="btn btn-danger btn-sm"></th>
+			   <th><input type="button" (click) = "updatePost(post._id)" value= "Edit" class ="btn btn-warning btn-sm"></th>
 			</tr>
-			
+
 	</table>
+</div>
 </div>
