--- a/Angular-Front/src/app/components/control-dates/control-dates.component.html
+++ b/Angular-Front/src/app/components/control-dates/control-dates.component.html
@@ -1,12 +1,13 @@
+<div class="all" >
 <div class = "container">
 	<h2 class = "page-header"> Select Dates</h2>
-	<form (submit) = "blockDate()">
+	<form (submit) = "blockDate()" class="col-lg-4">
 		<div class = "form-group">
 			<label>Date</label>
-			<input type="date"  [(ngModel)] = "date" name ="date" class = "form-control" required>
+      <input type="date"  [(ngModel)] = "date" name ="date" class = "form-control" required>
 		</div>
-		
 		<input type="submit" class ="btn btn-success" value = "Submit">
 	</form>
 </div>
 <hr>
+</div>
