--- a/Angular-Front/src/app/components/leave-history/leave-history.component.html
+++ b/Angular-Front/src/app/components/leave-history/leave-history.component.html
@@ -1,3 +1,4 @@
+<div class="all">
 <div class = "container">
 	<h2>Leaves History</h2>
 	<br><br>
@@ -8,14 +9,15 @@
 			<th>Describe</th>
 			<th>State</th>
 	    </tr>
-			  
+
 	    <tr *ngFor = "let hry of history">
 			<td>{{hry.date}}</td>
 			<td>{{hry.reason}}</td>
 			<td>{{hry.describe}}</td>
 			<th>{{hry.state}}</th>
 		</tr>
-			
+
 	</table>
 </div>
 
+</div>
