--- a/Angular-Front/src/app/components/login/login.component.html
+++ b/Angular-Front/src/app/components/login/login.component.html
@@ -1,14 +1,91 @@
-<div class = "container">
-	<h2 class = "page-header">Login</h2>
-	<form (submit) = "loginUser()">
-		<div class = "form-group">
-			<label>Email</label>
-			<input type="text" [(ngModel)] = "email" name ="email" class = "form-control">
-		</div>
-			<div class = "form-group">
-			<label>Password</label>
-			<input type="text" [(ngModel)] = "password" name ="password" class = "form-control">
-		</div>
-		<input type="submit" class ="btn btn-success" value = "Login">
-	</form>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="all" >
+<div class="container">
+  <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info" >
+      <div class="panel-heading">
+        <div class="panel-title">Sign In</div>
+        <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="#">Forgot password?</a></div>
+      </div>
+
+      <div style="padding-top:30px" class="panel-body" >
+
+        <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+
+        <form (submit) = "loginUser()" id="loginform" class="form-horizontal" role="form">
+
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input id="login-username" type="text" [(ngModel)] = "email" class="form-control" name="username" value="" placeholder="email">
+          </div>
+
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input id="login-password" type="password" [(ngModel)] = "password" class="form-control" name="password" placeholder="password">
+          </div>
+
+
+
+          <div class="input-group">
+            <div class="checkbox">
+              <label>
+                <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+              </label>
+            </div>
+          </div>
+
+
+          <div style="margin-top:10px" class="form-group">
+            <!-- Button -->
+            <div class="col-sm-12 controls">
+              <input type="submit" class ="btn btn-success" value = "Login">
+            </div>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+
 </div>
+
+</div>
+
+
+<!--<div class = "container">-->
+  <!--<div class="container">-->
+    <!--<div class="col-md-4"></div>-->
+    <!--<div class="col-md-4"><h2 class = "page-header">Login</h2></div>-->
+    <!--<div class="col-md-4"></div>-->
+  <!--</div>-->
+
+  <!--<form (submit) = "loginUser()">-->
+    <!--<div class="container">-->
+      <!--<div class="col-md-4"></div>-->
+      <!--<div class = "form-group col-md-4">-->
+        <!--<label>Email</label>-->
+        <!--<input type="text" [(ngModel)] = "email" name ="email" class = "form-control">-->
+      <!--</div>-->
+      <!--<div class="col-md-4"></div>-->
+    <!--</div>-->
+
+    <!--<div class="container">-->
+      <!--<div class="col-md-4"></div>-->
+      <!--<div class = "form-group col-md-4">-->
+        <!--<label>Password</label>-->
+        <!--<input type="text" [(ngModel)] = "password" name ="password" class = "form-control">-->
+      <!--</div>-->
+      <!--<div class="col-md-4"></div>-->
+    <!--</div>-->
+
+    <!--<div class="container">-->
+      <!--<div class="col-md-4"></div>-->
+      <!--<div class="col-md-4"><input type="submit" class ="btn btn-primary btn-block" value = "Login"></div>-->
+      <!--<div class="col-md-4"></div>-->
+    <!--</div>-->
+  <!--</form>-->
+<!--</div>-->
