--- a/Angular-Front/src/app/components/manage-leaves/manage-leaves.component.html
+++ b/Angular-Front/src/app/components/manage-leaves/manage-leaves.component.html
@@ -1,6 +1,18 @@
+<div class="all">
+<div class = "container">
+  <h2 class = "page-header"> Select Dates</h2>
+  <form class = "col-lg-4" (submit) = "blockDate()">
+
+    <div class = "form-group">
+      <label>Date</label>
+      <input type="date"  [(ngModel)] = "date" name ="date" class = "form-control" required>
+    </div>
+    <input type="submit" class ="btn btn-success" value = "Submit">
+  </form>
+</div>
 <div class = "container">
 <h2>All Requested Leaves</h2>
-<br><br>	
+<br><br>
 	<table>
 			<tr>
 			   <th>Name</th>
@@ -12,7 +24,7 @@
 			   <th>Accept</th>
 			   <th>Delete</th>
 			</tr>
-			  
+
 			<tr *ngFor = "let request of requests">
 			   <td>{{request.name}}</td>
 			   <td>{{request.post}}</td>
@@ -23,7 +35,8 @@
 			   <th><input type="button" (click) = "acceptRequest(request)" value= "Accept" class ="btn btn-warning"></th>
 			   <th><input type="button" (click) = "deleteRequest(request)" value= "Cancel" class ="btn btn-danger"></th>
 			</tr>
-			
+
 	</table>
 </div>
 
+</div>
