--- a/Angular-Front/src/app/components/profile/profile.component.html
+++ b/Angular-Front/src/app/components/profile/profile.component.html
@@ -1,25 +1,89 @@
-<div class = 'container'>
-	<div *ngIf="user">
-		<div class = "row">
-			NAME : {{user.full_name}}
-		</div>
-		<br>
-		<div class = "row">
-			POST : {{user.post}}
-		</div>
-		<br>
-		<div class = "row">
-			CONTACT NO : {{user.phone}}
-		</div>
-		<br>
-		<div class = "row">
-			USERNAME : {{user.username}}
-		</div>
-		<br>
-		<div class = "row">
-			EMAIL : {{user.email}}
-		</div>
-		<br>
-    </div>
-</div>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+<div class="all">
+<div class="container">
+  <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info" >
+      <div class="panel-heading">
+        <div class="panel-title">Your Profile</div>
 
+      </div>
+
+      <div style="padding-top:30px" class="panel-body" >
+
+        <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+        <div *ngIf="user">
+
+          <form (submit) = "loginUser()" id="loginform" class="form-horizontal" role="form">
+
+            <div style="margin-bottom: 25px" class="input-group">
+              <span class="input-group-addon"><a>Full Name  :</a></span>
+              <input id="login-fullname" type="text"  class="form-control" name="full_name" value="{{user.full_name}}" >
+            </div>
+
+            <div style="margin-bottom: 25px" class="input-group">
+              <span class="input-group-addon"><a>Login Post :</a></span>
+              <input id="login-name" type="text"  class="form-control" name="post" value="{{user.post}}" disabled>
+            </div>
+
+            <div style="margin-bottom: 25px" class="input-group">
+              <span class="input-group-addon"><a>Mobile No  :</a></span>
+              <input id="login-phone" type="text"  class="form-control" name="phone" value="{{user.phone}}" placeholder="email" >
+            </div>
+
+            <div style="margin-bottom: 25px" class="input-group">
+              <span class="input-group-addon"><a>Username   :</a></span>
+              <input id="login-username" type="text"  class="form-control" name="username" value="{{user.username}}" >
+            </div>
+
+            <div style="margin-bottom: 25px" class="input-group">
+              <span class="input-group-addon"><a>Email : </a></span>
+              <input id="login-email" type="text"  class="form-control" name="email" value="{{user.email}}" disabled>
+            </div>
+            <div style="margin-top:10px" class="form-group">
+              <!-- Button -->
+              <div class="col-sm-12 controls">
+                <!--<input type="submit" class ="btn btn-success" value = "update">-->
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div>
+</div>
+<!--<div class="container">-->
+  <!--<div class="cl-mod-2"></div>-->
+  <!--<div class="cl-mod-8">-->
+    <!--<div class="table-responsive">-->
+      <!--<table class="table">-->
+        <!--<tr>-->
+          <!--<td>NAME</td>-->
+          <!--<td>{{user.full_name}}</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+          <!--<td>POST</td>-->
+          <!--<td>{{user.post}}</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+          <!--<td>CONTACT NO</td>-->
+          <!--<td>{{user.phone}}</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+          <!--<td>USERNAME</td>-->
+          <!--<td>{{user.username}}</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+          <!--<td>EMAIL</td>-->
+          <!--<td>{{user.email}}</td>-->
+        <!--</tr>-->
+      <!--</table>-->
+    <!--</div>-->
+  <!--</div>-->
+  <!--<div class="cl-mod-2"></div>-->
+<!--</div>-->
