--- a/Angular-Front/src/app/components/update-post/update-post.component.html
+++ b/Angular-Front/src/app/components/update-post/update-post.component.html
@@ -1,4 +1,5 @@
-<div class = "container">
+<div class="all">
+<div class = "container cl-lg-4">
 	<h2 class = "page-header"> Update Posts</h2>
 	<form (submit) = "updateData()">
 		<div class = "form-group">
@@ -11,7 +12,7 @@
 		</div>
 		<div class = "form-group">
 			<label>Content</label><br>
-			<textarea [(ngModel)]='content' name ="content" rows="6" cols="100"></textarea>
+			<textarea [(ngModel)]='content' name ="content" rows="6" cols="60"></textarea>
 		</div>
 		<br>
         <div class = "form-group">
@@ -21,4 +22,5 @@
 			<input type="button" (click) = "redirectBack()" value= "back" class ="btn btn-warning">
         </div>
 	</form>
+</div>
 </div>
