--- a/Angular-Front/src/app/components/view-user/view-user.component.html
+++ b/Angular-Front/src/app/components/view-user/view-user.component.html
@@ -1,6 +1,7 @@
+<div class="all">
 <div class = "container">
 <h2>Leaves History</h2>
-<br><br>	
+<br><br>
 	<table>
 			<tr>
 			   <th>Date</th>
@@ -8,20 +9,21 @@
 			   <th>Describe</th>
 			   <th>State</th>
 			</tr>
-			  
+
 			<tr *ngFor = "let hry of history">
 			   <td>{{hry.date}}</td>
 			   <td>{{hry.reason}}</td>
 			   <td>{{hry.describe}}</td>
 			   <th>{{hry.state}}</th>
 			</tr>
-			
+
 	</table>
     <br><br>
 	<div class = "col-md-3">
 			<input type="button" (click) = "redirectBack()" value= "back" class ="btn btn-success">
 			<br><br>
-    </div>	
+    </div>
 </div>
 
-	
+
+</div>
